# SpMM

./: CMakeLists.txt  Makefile  README.md  main.cpp  spmm.cu
include/: config.cuh  convert.cuh  data.cuh  debug.cuh  matmul_dense.cuh  matmul_sparse.cuh
src/: convert.cu  data.cu  debug.cu  matmul.cu  matmul_dense.cu  matmul_sparse.cu
